[Feature] add hash function for xx_hash3_64  (#28910)
xx_hash3_64 has much better performance than murmur_hash3_32 by using AVX2 instruction according their benchmark, and has state-of-art hash quality which is broadly integrated in many software.

Reference: https://github.com/Cyan4973/xxHash
---------

Signed-off-by: beans <jing.gao@outlook.com>
(cherry picked from commit 058e08b3d608e5e7ee6149e9286e4839533e8aae)

--- a/be/src/util/CMakeLists.txt
+++ b/be/src/util/CMakeLists.txt
@@ -101,6 +101,7 @@ set(UTIL_FILES
   stack_trace_mutex.cpp
   bthreads/future.h
   bthreads/future_impl.cpp
+  hash_util.cpp
 )
 
 add_library(Util STATIC
