[Enhancement][Cherry-pick][Branch-3.1] Support sync publish version for primary key table (#27055) (#29370) (#3675)
Co-authored-by: zhangqiang <qiangzh95@gmail.com>

--- a/be/test/CMakeLists.txt
+++ b/be/test/CMakeLists.txt
@@ -283,6 +283,7 @@ set(EXEC_FILES
         ./storage/binlog_reader_test.cpp
         ./storage/tablet_binlog_test.cpp
         ./storage/publish_version_task_test.cpp
+        ./storage/publish_version_manager_test.cpp
         ./storage/get_use_pk_index_test.cpp
         ./runtime/buffer_control_block_test.cpp
         ./runtime/datetime_value_test.cpp
