--- a/be/src/bench/CMakeLists.txt
+++ b/be/src/bench/CMakeLists.txt
@@ -22,3 +22,4 @@ ADD_BE_BENCH(${SRC_DIR}/bench/parquet_writer_array_bench)
 ADD_BE_BENCH(${SRC_DIR}/bench/parquet_dict_decode_bench)
 ADD_BE_BENCH(${SRC_DIR}/bench/get_dict_codes_bench)
 ADD_BE_BENCH(${SRC_DIR}/bench/persistent_index_bench)
+ADD_BE_BENCH(${SRC_DIR}/bench/orc_column_reader_bench)
