[Enhancement] add nap_sleep() to handle sleep a large portion of time (#29689) (#29773)
* respect AWS_EC2_METADATA_DISABLED if already set in env
* BE binary can stop with 10 seconds with this change nap_sleep() change
  and also AWS_EC2_METADATA_DISABLED=true in non-ec2 env


(cherry picked from commit ef6c33877b8198faf1756260a240a58dbcdfb02c)

Signed-off-by: Kevin Xiaohua Cai <caixiaohua@starrocks.com>

--- a/be/src/util/CMakeLists.txt
+++ b/be/src/util/CMakeLists.txt
@@ -44,6 +44,7 @@ set(UTIL_FILES
   starrocks_metrics.cpp
   mem_info.cpp
   metrics.cpp
+  misc.cpp
   murmur_hash3.cpp
   network_util.cpp
   parse_util.cpp
