ProGuard support build with java 11 (#3964)

--- a/build-support/proguard-java11.cfg
+++ b/build-support/proguard-java11.cfg
@@ -1,5 +1,5 @@
 -verbose
--target 1.8
+-target 11
 -dontshrink
 -dontoptimize
 -dontskipnonpubliclibraryclasses
@@ -13,4 +13,9 @@
 -keepclassmembers public class * {void set*(***);*** get*();}
 -dontnote
 -ignorewarnings
+-libraryjars <java.home>/jmods/java.base.jmod
+-libraryjars <java.home>/jmods/java.datatransfer.jmod
+-libraryjars <java.home>/jmods/java.prefs.jmod
+-libraryjars <java.home>/jmods/java.xml.jmod
+-libraryjars <java.home>/jmods/java.desktop.jmod
 -printconfiguration
