[Enhancement] Upgrade bdb-je version for safety (#30029) (#30223) (#4071)
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/fe/fe-core/pom.xml
+++ b/fe/fe-core/pom.xml
@@ -171,6 +171,10 @@ under the License.
                     <groupId>com.sun</groupId>
                     <artifactId>tools</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.checkerframework</groupId>
+                    <artifactId>checker-qual</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
