--- a/test/conf/sr.conf
+++ b/test/conf/sr.conf
@@ -1,11 +1,32 @@
 [mysql-client]
-host = 192.168.100.28
-port = 9030
-user = root
+host =
+port =
+user =
 password =
 http_port =
 
 [replace]
 url = http://${mysql-client:host}:${mysql-client:http_port}
+mysql_cmd = mysql -h${mysql-client:host} -P${mysql-client:port} -u${mysql-client:user}
 
 [env]
+oss_bucket =
+
+hdfs_host =
+hdfs_port =
+hdfs_user =
+hdfs_passwd =
+hdfs_path = /starrocks_ci_data
+hdfs_broker_name = hdfs_broker
+
+hive_metastore_uris =
+
+hudi_hive_metastore_uris =
+
+iceberg_catalog_hive_metastore_uris =
+
+external_mysql_ip =
+external_mysql_port =
+external_mysql_user =
+external_mysql_password =
+jdbc_url =
