[Tool] set keywords for rebase and backport (backport #5216)
Co-authored-by: andyziye <108652123+andyziye@users.noreply.github.com>

--- a/.github/workflows/pr-checker.yml
+++ b/.github/workflows/pr-checker.yml
@@ -105,6 +105,10 @@ jobs:
   automerge-check:
     runs-on: ubuntu-latest
     needs: backport-check
+    env:
+      PR_NUMBER: ${{ github.event.number }}
+      REPO: ${{ github.repository }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     if: >
       !failure() &&
       github.base_ref != 'main' &&
@@ -112,6 +116,14 @@ jobs:
       (contains(github.event.pull_request.title, 'cherry-pick') || 
       contains(github.event.pull_request.title, 'backport'))
     steps:
+      - name: check
+        run: |
+          labels=`gh pr view ${PR_NUMBER} -R ${REPO} --json labels | jq -r '.labels[].name'`
+          if [[ "${labels}" =~ "conflict"  ]]; then
+              echo "PR with conflict label, skip auto-merge!"
+              exit 1
+          fi
+          
       - name: add automerge label
         uses: actions-ecosystem/action-add-labels@v1
         with:
