[Feature] Support group-level queue and control concurrency limit in Leader FE  (#31868) (#5341)
Co-authored-by: zihe.liu <ziheliu1024@gmail.com>

--- a/be/src/agent/CMakeLists.txt
+++ b/be/src/agent/CMakeLists.txt
@@ -29,4 +29,5 @@ add_library(Agent STATIC
         report_task.cpp
         agent_task.cpp
         task_signatures_manager.cpp
+        resource_group_usage_recorder.cpp
         )
